# ECS_CORE

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  Makefile  README.md  check_header_validity.sh  coverage.at_linked_list.c.59c3e4d6e68fc063a239768c1f5f06ea.html  coverage.back_linked_list.c.e0870bee5e4868ce623975fc6caaa03b.html  coverage.create_linked_list.c.ae8ee0f455a035f7801294e82df9ca2e.html  coverage.destroy_linked_list.c.f9683d79a434fbf1d435cbcd9765fb94.html  coverage.empty_linked_list.c.6a3d6a6b1a0db0a6e1c02485a653e935.html  coverage.front_linked_list.c.d6ac3e63f88d14484ff97495639e8ac5.html  coverage.html  coverage.insert_linked_list.c.181b285ff273387e0a13898287125069.html  coverage.push_back_linked_list.c.042f6701c2c670f15ac58fb1a7b04ce4.html  coverage.remove_linked_list.c.5b5006a5174733afec7bc75942cf6bff.html  coverage.size_linked_list.c.e8f4b9345d79fdd2f903245593567135.html  coverage.vector.c.b2d5c6a6cbb9c1c3a845c31ef4674534.html  coverage.world.c.2ba581b1a0c7f752a701bbe5c856dc0e.html  doxyfile  index.html  run_test.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: Documentation.yml  Fix.yml  basic_feature.md  basic_feature.yml  bug_report.md  fix_request.md
.github/workflows/: CI.yml  Documentation.yml  launch_tests.yml
cmake/: Dependencies.cmake  DetectCompiler.cmake  Testings.cmake
config/: basic_scene.json  main_menu.json
coverage/: coverage.at_linked_list.c.59c3e4d6e68fc063a239768c1f5f06ea.html  coverage.back_linked_list.c.e0870bee5e4868ce623975fc6caaa03b.html  coverage.component_destructor.c.c2bedd0d1dee3aa6f2b81b9b6ae6d9d8.html  coverage.create_linked_list.c.ae8ee0f455a035f7801294e82df9ca2e.html  coverage.destroy_linked_list.c.f9683d79a434fbf1d435cbcd9765fb94.html  coverage.empty_linked_list.c.6a3d6a6b1a0db0a6e1c02485a653e935.html  coverage.entity_component.c.bdd4648edc5e93a7121ccb40bf1eb2bb.html  coverage.front_linked_list.c.d6ac3e63f88d14484ff97495639e8ac5.html  coverage.html  coverage.insert_linked_list.c.181b285ff273387e0a13898287125069.html  coverage.movement.c.e6914e838d5ad174b014d9f8ed6151d0.html  coverage.position.c.8235722ccba000fc9f5957648a29cb69.html  coverage.push_back_linked_list.c.042f6701c2c670f15ac58fb1a7b04ce4.html  coverage.remove_linked_list.c.5b5006a5174733afec7bc75942cf6bff.html  coverage.size_linked_list.c.e8f4b9345d79fdd2f903245593567135.html  coverage.vector.c.b2d5c6a6cbb9c1c3a845c31ef4674534.html  coverage.velocity.c.0f458d68a86bcefe79a25b1ca6723817.html  coverage.world.c.2ba581b1a0c7f752a701bbe5c856dc0e.html  coverage.world_constructor.c.6ba3b59cd2b42a8b072c89d1654c3b86.html  coverage.world_entity.c.a87a6439bcf400d2649241f987267570.html  coverage.world_initializer.c.7f0bd5df6618d3d1d20fc47833216ebe.html  coverage.world_resource.c.8d1cb0e6928ddcd64f0211ad44dcc51f.html  coverage.world_system.c.6ba245695ec2024a5bf3e5c2e0eadc83.html
docs/: index.html
docs/ECS/: annotated.html  classes.html  component_8h.html  component_8h_source.html  component__destructor_8c.html  component__destructor_8c__incl.map  component__destructor_8c__incl.md5  dir_000001_000000.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_d44c64559bbebec7f509842c48db8b23.html  entity_8h.html  entity_8h.js  entity_8h_ac2d6e5cb2d530516f7a19ca8bc74646e_icgraph.md5  entity_8h_source.html  entity__component_8c.html  entity__component_8c.js  entity__component_8c_ac2d6e5cb2d530516f7a19ca8bc74646e_icgraph.map  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  graph_legend.html  index.html  navtreeindex0.js  resource_8h.html  resource_8h_source.html  structcomponent__s.html  structentity__s.html  structresource__s.html  structsystem__s.html  structworld__s.html  system_8h.html  system_8h_source.html  world_8c.html  world_8h.html  world_8h_source.html  world__constructor_8c.html  world__entity_8c.html  (+10 more)
docs/ECS_CORE/: annotated.html  annotated_dup.js  classes.html  clickable_8h.html  clickable_8h.js  clickable_8h__dep__incl.map  clickable_8h__dep__incl.md5  clickable_8h__incl.map  clickable_8h__incl.md5  clickable_8h_source.html  collidable_8h.html  collidable_8h.js  collidable_8h__dep__incl.map  collidable_8h__dep__incl.md5  collidable_8h__incl.map  collidable_8h__incl.md5  collidable_8h_source.html  color_8h.html  color_8h.js  color_8h__dep__incl.map  color_8h__dep__incl.md5  color_8h__incl.map  color_8h__incl.md5  color_8h_a16cea6c0559e54620c7ebaa555169e9d_icgraph.map  color_8h_a16cea6c0559e54620c7ebaa555169e9d_icgraph.md5  color_8h_a8d06a6bfdb78a95365518f5cd776df5e_cgraph.map  color_8h_ae95e60a1506b4748518778627f7f8d7b_icgraph.md5  color_8h_source.html  component__clickable_8c.html  component__clickable_8c.js  component__clickable_8c__incl.map  component__clickable_8c__incl.md5  (+491 more)
include/: component.h  linked_list.h  logger.h  resource.h  system.h  world.h
includes/: components.h  ecs_color.h  ecs_graphics.h  ecs_vector.h  resources.h  systems.h  vector2i.h  window.h  world_loader_constructors.h
lib/: CMakeLists.txt  test.c
lib/ECS/: CMakeLists.txt  Doxyfile  Makefile  doxyfile
lib/ECS/include/: component.h  entity.h  resource.h  system.h  world.h  world_entity.h  world_resource.h  world_system.h
lib/ECS/source/: entity_component.c  system.c  world.c  world_constructor.c  world_entity.c  world_resource.c  world_system.c
lib/linked_list/: CMakeLists.txt  Makefile  at_linked_list.c  back_linked_list.c  create_linked_list.c  front_linked_list.c  insert_linked_list.c  size_linked_list.c
lib/linked_list/include/: linked_list.h
lib/linked_list/source/: destroy_linked_list.c  empty_linked_list.c  push_back_linked_list.c  remove_linked_list.c
lib/vector/: CMakeLists.txt  Makefile
lib/vector/include/: vector.h
lib/vector/source/: vector.c
sources/: CMakeLists.txt  ecs_graphics.c  main.c  my_hunter.c
tests/: CMakeLists.txt
tests/sources/System/: CMakeLists.txt  movement_tests.c
tests/unit/Component/: CMakeLists.txt  component_color.c  component_position.c  component_size.c  component_velocity.c
tests/unit/System/: CMakeLists.txt
(+372 files in other folders)
